crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_check_updates_marks_installed_tracks_blocked_by_newer_pv.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "managed_resource_update_check_summary(&checked, tempdir.path())?"
---
[
    UpdateCheckTrackSnapshot {
        status: "Blocked",
        resource_name: "redis",
        track: "7.2",
        current_artifact_version: "7.2.5-pv1",
        current_artifact_path: "home/.pv/resources/redis/7.2/releases/7.2.5-pv1",
        latest_artifact_version: None,
        current_revocation: None,
        latest_revocation: None,
        blocked_by: Some(
            "requires PV 999.0.0, current PV 0.2.5",
        ),
        reason: None,
    },
]
