crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_install_php_pair_preflights_frankenphp_track_before_mutation.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(result, state_after_failure, client.byte_request_count(),)"
---
(
    Err(
        Resources(
            TrackNotFound {
                resource: "frankenphp",
                track: "8.4",
            },
        ),
    ),
    [],
    0,
)
