crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_install_php_pair_second_artifact_failure_records_no_pair_state.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(result, state_after_failure, client.byte_request_count(),)"
---
(
    Err(
        Resources(
            HttpRequestFailed {
                url: "https://artifacts.example.test/frankenphp-8.4.8-pv1-darwin-arm64.tar.gz",
                reason: "no scripted byte response",
            },
        ),
    ),
    [],
    3,
)
